Added basic login-module

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,5 @@
-<div class="container">
+<div class="container pos--center">
+  <div class="login-section">
+    <app-stepper></app-stepper>
+  </div>
 </div>
