--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -13,6 +13,7 @@ $font-color: #fff;
 
 /* #region Toolbar */
 $toolbar-height: 30px;
-$content-height: calc(100% - 30px);
+$content-height: calc(100% - 30px - 25px - 25px);
 $toolbar-background-color: #0a0a0a;
+$container-padding: 25px;
 /* #endregion */
