Added basic header for net worth

--- a/src/app/login/components/stepper/stepper.component.html
+++ b/src/app/login/components/stepper/stepper.component.html
@@ -7,7 +7,7 @@
         <input matInput formControlName="accountName" placeholder="{{'ACCOUNT.NAME' | translate}}" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="sessionId" placeholder="{{'ACCOUNT.SESSIONID' | translate}}" required>
+        <input matInput formControlName="sessionId" type="password" placeholder="{{'ACCOUNT.SESSIONID' | translate}}" required>
       </mat-form-field>
       <div class="btn-grp pull--right">
         <button mat-raised-button color="primary" matStepperNext>{{'ACTIONS.CONTINUE' | translate}}</button>
