--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,7 +3,7 @@
 /* #region General */
 $version-font-color: #cecece;
 $background-color: #303030;
-$background-overlay: linear-gradient(rgba(16, 16, 16, 0.7), rgba(16, 16, 16, 0.7));
+$background-overlay: linear-gradient(rgba(16, 16, 16, 0.9), rgba(16, 16, 16, 0.9));
 /* #endregion */
 
 /* #region Font */
@@ -14,6 +14,7 @@ $font-color: #fff;
 /* #region Toolbar */
 $toolbar-height: 30px;
 $content-height: calc(100% - 30px - 25px - 25px);
+$content-height-with-tab: calc(100% - 30px - 25px - 25px - 75px);
 $toolbar-background-color: #0a0a0a;
 $container-padding: 25px;
 /* #endregion */
