--- a/src/app/authorize/net-worth/net-worth.component.html
+++ b/src/app/authorize/net-worth/net-worth.component.html
@@ -1,1 +1,18 @@
-<div class="container">net-worth</div>
+<mat-tab-group #tabGroup id="tabGroup" [(selectedIndex)]="selectedIndex">
+    <mat-tab #currentGrpTab id="currentGrpTab" class="active">
+        <ng-template mat-tab-label>
+            <mat-icon class="tab-icon">show_chart</mat-icon>
+            &nbsp;{{'NETWORTH.GRAPH.HEADER' | translate}}
+        </ng-template>
+    </mat-tab>
+    <mat-tab #summaryTab id="summaryTab">
+        <ng-template mat-tab-label>
+            <mat-icon class="tab-icon">list</mat-icon>
+            &nbsp;{{'NETWORTH.ITEMS.HEADER' | translate}}
+        </ng-template>
+    </mat-tab>
+</mat-tab-group>
+<div class="container tab-group-container">
+    <div [hidden]="selectedIndex != 0">graph</div>
+    <div [hidden]="selectedIndex != 1">items</div>
+</div>
