Reworked container-styling

--- a/src/app/authorize/net-worth/net-worth.component.html
+++ b/src/app/authorize/net-worth/net-worth.component.html
@@ -16,3 +16,4 @@
     <div [hidden]="selectedIndex != 0">graph</div>
     <div [hidden]="selectedIndex != 1">items</div>
 </div>
+<app-net-worth-bar></app-net-worth-bar>
