--- a/src/app/authorize/net-worth/net-worth.component.html
+++ b/src/app/authorize/net-worth/net-worth.component.html
@@ -12,7 +12,7 @@
         </ng-template>
     </mat-tab>
 </mat-tab-group>
-<div class="container tab-group-container">
+<div class="container net-worth-content">
     <div [hidden]="selectedIndex != 0">graph</div>
     <div [hidden]="selectedIndex != 1">items</div>
 </div>
