--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container pos--center">
+<div class="container login-content pos--center">
   <div class="login-section">
     <app-stepper></app-stepper>
   </div>
