--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,7 @@
 @import "./exilence-theme.scss";
 
 /* #region General */
+$container-padding: 25px;
 $version-font-color: #cecece;
 $background-color: #303030;
 $background-overlay: linear-gradient(rgba(16, 16, 16, 0.9), rgba(16, 16, 16, 0.9));
@@ -11,12 +12,16 @@ $main-font: 'Roboto';
 $font-color: #fff;
 /* #endregion */
 
+/* #region Net worth */
 $net-worth-bar-height: 100px;
+$net-worth-content-height: calc(100% - 30px - 100px - 125px);
+/* #endregion */
+
+/* #region Login */
+$login-content-height: calc(100% - 30px - 25px - 125px); 
+/* #endregion */
 
 /* #region Toolbar */
 $toolbar-height: 30px;
-$login-content-height: calc(100% - 30px - 25px - 125px); 
-$net-worth-content-height: calc(100% - 30px - 100px - 125px);
 $toolbar-background-color: #0a0a0a;
-$container-padding: 25px;
 /* #endregion */
