Initial controls for net-worth toolbar

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -62,3 +62,21 @@ html, body {
   justify-content: center;
   align-items: center;
 }
+
+.ml--15 {
+  margin-left: 15px;
+}
+
+.mr--15 {
+  margin-right: 15px;
+}
+
+.mx--15 {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.my--15 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
