--- a/src/app/authorize/net-worth/net-worth.component.html
+++ b/src/app/authorize/net-worth/net-worth.component.html
@@ -13,7 +13,12 @@
     </mat-tab>
 </mat-tab-group>
 <div class="container net-worth-content">
-    <div [hidden]="selectedIndex != 0">graph</div>
-    <div [hidden]="selectedIndex != 1">items</div>
+    <app-net-worth-toolbar></app-net-worth-toolbar>
+    <div [hidden]="selectedIndex != 0">
+        <app-net-worth-graph></app-net-worth-graph>
+    </div>
+    <div [hidden]="selectedIndex != 1">
+        <app-net-worth-item-table></app-net-worth-item-table>
+    </div>
 </div>
 <app-net-worth-bar></app-net-worth-bar>
