--- a/src/app/authorize/net-worth/components/net-worth-bar/net-worth-bar.component.html
+++ b/src/app/authorize/net-worth/components/net-worth-bar/net-worth-bar.component.html
@@ -1,5 +1,5 @@
 <div class="net-worth-bar">
   <div class="net-worth-bar-content">
-    net-worth-bar
+    <app-net-worth-toolbar></app-net-worth-toolbar>
   </div>
 </div>
