--- a/src/app/authorize/net-worth/components/net-worth-graph/net-worth-graph.component.html
+++ b/src/app/authorize/net-worth/components/net-worth-graph/net-worth-graph.component.html
@@ -1,1 +1,6 @@
-graph
+<div class="chart-container">
+  <ngx-charts-line-chart [scheme]="colorScheme" [results]="data" [xAxis]="true"
+    [yAxis]="true" [legend]="true" [showXAxisLabel]="true" [showYAxisLabel]="true" [xAxisLabel]="'x axis'"
+    [yAxisLabel]="'y axis'" [autoScale]="true" [timeline]="true">
+  </ngx-charts-line-chart>
+</div>
