--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -81,3 +81,9 @@ html, body {
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+/* #region Ngx-charts overrides */
+.chart-legend .legend-title {
+  font-weight: normal !important;
+}
+/* #endregion */
