--- a/src/app/authorize/net-worth/components/net-worth-bar/net-worth-bar.component.scss
+++ b/src/app/authorize/net-worth/components/net-worth-bar/net-worth-bar.component.scss
@@ -5,6 +5,6 @@
     height: $net-worth-bar-height;
 
     .net-worth-bar-content {
-        padding: 25px;
+        padding: 25px 25px 0 25px;
     }
 }
