Changed folder-structure and implemented container-components

--- a/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
+++ b/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
@@ -1,6 +1,5 @@
 .chart-container {
-    height: calc(100% - 50px);
+    height: 100%;
     max-width: 100%;
     fill: white;
-    padding: 25px 0 25px 0;
 }
