--- a/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -13,11 +13,7 @@
     </mat-tab>
 </mat-tab-group>
 <div class="container net-worth-content">
-    <div [hidden]="selectedIndex != 0">
-        <app-net-worth-graph></app-net-worth-graph>
-    </div>
-    <div [hidden]="selectedIndex != 1">
-        <app-net-worth-item-table></app-net-worth-item-table>
-    </div>
+    <app-net-worth-graph [hidden]="selectedIndex != 0"></app-net-worth-graph>
+    <app-net-worth-item-table [hidden]="selectedIndex != 1"></app-net-worth-item-table>
 </div>
 <app-net-worth-bar></app-net-worth-bar>
