Initial state for dependency status and added sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-header></app-header>
+<app-header (toggled)="notificationSidenav.toggle()"></app-header>
+<app-notification-sidebar #notificationSidenav></app-notification-sidebar>
 <router-outlet></router-outlet>
