--- a/src/app/login/containers/login-page/login-page.component.html
+++ b/src/app/login/containers/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="container login-content pos--center">
   <div class="login-section">
-    <app-stepper></app-stepper>
+    <app-stepper (formData)="login($event)"></app-stepper>
   </div>
 </div>
