--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,11 +1,14 @@
-<mat-toolbar class="toolbar">
+<mat-toolbar class="toolbar noselect">
   <span class="title">{{ 'INFO.TITLE' | translate }}
-      <span class="version">{{appVersion}}</span>
+    <span class="version">{{appVersion}}</span>
   </span>
-  <div class="pull--right" *ngIf="electronService.isElectron()">
+  <div class="pull--right">
+    <mat-icon (click)="toggleSidenav()" class="sidenav-toggle" [ngClass]="isToggled ? 'toggled' : ''">keyboard_arrow_left</mat-icon>
+    <ng-container *ngIf="electronService.isElectron()">
       <mat-icon (click)="minimize()">minimize</mat-icon>
       <mat-icon (click)="maximize()" *ngIf="!isMaximized">crop_square</mat-icon>
       <mat-icon (click)="unmaximize()" *ngIf="isMaximized">filter_none</mat-icon>
       <mat-icon (click)="close()">close</mat-icon>
+    </ng-container>
   </div>
 </mat-toolbar>
