Started working on snapshots

--- a/src/app/login/containers/login-page/login-page.component.scss
+++ b/src/app/login/containers/login-page/login-page.component.scss
@@ -1,3 +1,13 @@
+@import "./../../../../assets/styles/variables";
+
 .login-section {
-    width: 40%;
+  width: 40%;
+
+  @media (max-width: $screen-xl) {
+    width: 60%;
+  }
+
+  @media (max-width: $screen-md) {
+    width: 80%;
+  }
 }
