Restyled auto-fill fields

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -151,3 +151,14 @@ html, body {
 
 /* #region Material overrides */
 /* #endregion */
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+}
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: $font-color !important;
+}
