--- a/src/app/login/components/stepper/stepper.component.html
+++ b/src/app/login/components/stepper/stepper.component.html
@@ -7,7 +7,8 @@
         <input matInput formControlName="accountName" placeholder="{{'ACCOUNT.NAME' | translate}}" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput formControlName="sessionId" type="password" placeholder="{{'ACCOUNT.SESSIONID' | translate}}" required>
+        <input matInput formControlName="sessionId" type="password" placeholder="{{'ACCOUNT.SESSIONID' | translate}}"
+          required>
       </mat-form-field>
       <div class="btn-grp pull--right">
         <button mat-raised-button color="primary" matStepperNext>{{'ACTIONS.CONTINUE' | translate}}</button>
@@ -31,25 +32,10 @@
       </mat-form-field>
       <div class="btn-grp pull--right">
         <button mat-raised-button class="btn-back" matStepperPrevious>{{'ACTIONS.BACK' | translate}}</button>
-        <button mat-raised-button color="primary"
-          (click)="fetchCharacters()">{{'ACTIONS.CONTINUE' | translate}}</button>
+        <button mat-raised-button color="primary" (click)="authorize()">{{'ACTIONS.CONTINUE' | translate}}</button>
       </div>
       <mat-progress-bar color="primary" mode="indeterminate">
       </mat-progress-bar>
-    </form>
-  </mat-step>
-  <mat-step [stepControl]="charFormGroup">
-    <form [formGroup]="charFormGroup">
-      <ng-template matStepLabel>{{'CHARACTER.DESC' | translate}}</ng-template>
-      <mat-form-field>
-        <mat-select formControlName="characterName" placeholder="{{'CHARACTER.NAME' | translate}}" required>
-          <mat-option *ngFor="let item of characters" [value]="item.name">{{item.level}} - {{item.name}}</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <div class="btn-grp pull--right">
-        <button mat-raised-button class="btn-back" matStepperPrevious>{{'ACTIONS.BACK' | translate}}</button>
-        <button mat-raised-button color="primary" (click)="authorize()">{{'ACTIONS.CONTINUE' | translate}}</button>
-      </div>
     </form>
   </mat-step>
 </mat-vertical-stepper>
