--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -12,6 +12,7 @@ $faded-overlay-color: rgba(27, 27, 27, 0.6);
 /* #region Font */
 $main-font: 'Roboto';
 $font-color: #fff;
+$font-size: 14px;
 /* #endregion */
 
 /* #region Toolbar */
