--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -4,6 +4,7 @@
 $main-padding: 25px;
 $container-padding: 25px;
 $version-font-color: #cecece;
+
 $background-color: #303030;
 $background-overlay: linear-gradient(rgba(16, 16, 16, 0.9), rgba(16, 16, 16, 0.9));
 $faded-overlay-color: rgba(27, 27, 27, 0.6);
@@ -12,6 +13,7 @@ $faded-overlay-color: rgba(27, 27, 27, 0.6);
 /* #region Font */
 $main-font: 'Roboto';
 $font-color: #fff;
+$secondary-font-color: #cecece;
 $font-size: 14px;
 /* #endregion */
 
