Created ad-container with placeholder

--- a/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
+++ b/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
@@ -1,5 +1,7 @@
+@import "./../../../../../assets/styles/variables";
+
 .chart-container {
-    height: 100%;
+    height: calc(100% - #{$ad-banner-top} - #{$main-padding}*1);
     max-width: 100%;
     fill: white;
 }
