--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -22,6 +22,10 @@ $toolbar-height: 30px;
 $toolbar-background-color: #0a0a0a;
 /* #endregion */
 
+/* #region Ads */
+$ad-banner-top: 90px;
+/* #endregion */
+
 /* #region Net worth */
 $net-worth-bar-height: 100px;
 $net-worth-content-p-top: 85px;
