--- a/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -13,6 +13,9 @@
     </mat-tab>
 </mat-tab-group>
 <div class="container net-worth-content">
+    <div class="ad-container">
+        <img src="https://via.placeholder.com/970x90" />
+    </div>
     <app-net-worth-graph [hidden]="selectedIndex != 0"></app-net-worth-graph>
     <app-net-worth-item-table [hidden]="selectedIndex != 1"></app-net-worth-item-table>
 </div>
