Added build to title

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar noselect">
   <span class="title">{{ 'APP.TITLE' | translate }}
-    <span class="version">{{appVersion}}</span>
+    <span class="version">Build {{appVersion}}</span>
   </span>
   <div class="pull--right btn-area">
     <mat-icon (click)="toggleSidenav()" class="sidenav-toggle" [ngClass]="isToggled ? 'toggled' : ''">
