Added right-side ad

--- a/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
+++ b/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
@@ -1,4 +1,4 @@
-<div class="chart-container">
+<div class="chart-container pull--left float--left">
   <ngx-charts-line-chart [scheme]="colorScheme" [results]="data" [xAxis]="true"
     [yAxis]="true" [legend]="true" [showXAxisLabel]="true" [showYAxisLabel]="true" [xAxisLabel]="'x axis'"
     [yAxisLabel]="'y axis'" [autoScale]="true" [timeline]="true">
