--- a/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
+++ b/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
@@ -2,6 +2,6 @@
 
 .chart-container {
     height: calc(100% - #{$ad-banner-top} - #{$main-padding}*1);
-    max-width: 100%;
+    width: calc(100% - #{$ad-banner-right} - #{$main-padding}*1);
     fill: white;
 }
