--- a/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -18,5 +18,8 @@
     </div>
     <app-net-worth-graph [hidden]="selectedIndex != 0"></app-net-worth-graph>
     <app-net-worth-item-table [hidden]="selectedIndex != 1"></app-net-worth-item-table>
+    <div class="ad-container pull--right">
+        <img src="https://via.placeholder.com/120x240" />
+    </div>
 </div>
 <app-net-worth-bar></app-net-worth-bar>
