--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -24,6 +24,7 @@ $toolbar-background-color: #0a0a0a;
 
 /* #region Ads */
 $ad-banner-top: 90px;
+$ad-banner-right: 120px;
 /* #endregion */
 
 /* #region Net worth */
