--- a/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.html
+++ b/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.html
@@ -1,77 +1,85 @@
-<mat-form-field class="item-filter">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
-<div class="net-worth-table-container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 net-worth-table" matSort matSortActive="value"
-        matSortDisableClear matSortDirection="desc">
+<div class="net-worth-table-outer-container float--left">
+    <mat-form-field class="item-filter">
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+    <div class="net-worth-table-container">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 net-worth-table" matSort
+            matSortActive="value" matSortDisableClear matSortDirection="desc">
 
-        <ng-container matColumnDef="icon">
-            <th mat-header-cell *matHeaderCellDef> Icon </th>
-            <td mat-cell *matCellDef="let element" class="icon">
-                <img alt="{{element.name}}" title="{{element.name}}" src="{{element.icon}}" />
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="icon">
+                <th mat-header-cell *matHeaderCellDef> Icon </th>
+                <td mat-cell *matCellDef="let element" class="icon">
+                    <img alt="{{element.name}}" title="{{element.name}}" src="{{element.icon}}" />
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="name"> Name </th>
-            <td mat-cell *matCellDef="let element"><span class="rarity-{{element.frameType}}">{{element.name}}</span>
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="name"> Name </th>
+                <td mat-cell *matCellDef="let element"><span
+                        class="rarity-{{element.frameType}}">{{element.name}}</span>
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="tab">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="tab"> Tab </th>
-            <td mat-cell *matCellDef="let element">{{element.tab}}</td>
-        </ng-container>
+            <ng-container matColumnDef="tab">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="tab"> Tab </th>
+                <td mat-cell *matCellDef="let element">{{element.tab}}</td>
+            </ng-container>
 
-        <ng-container matColumnDef="links">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="links"> Links </th>
-            <td mat-cell *matCellDef="let element">
-                <span *ngIf="element.links > 0" class="links">{{element.links}} L</span>
-                <span *ngIf="element.links == 0 || element.links == undefined" class="not-available">n/a</span>
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="links">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="links"> Links </th>
+                <td mat-cell *matCellDef="let element">
+                    <span *ngIf="element.links > 0" class="links">{{element.links}} L</span>
+                    <span *ngIf="element.links == 0 || element.links == undefined" class="not-available">n/a</span>
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="quality">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="quality"> Quality </th>
-            <td mat-cell *matCellDef="let element"> {{element.quality}} </td>
-        </ng-container>
+            <ng-container matColumnDef="quality">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="quality"> Quality </th>
+                <td mat-cell *matCellDef="let element"> {{element.quality}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="gemLevel">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="gemLevel"> Level </th>
-            <td mat-cell *matCellDef="let element">
-                <span *ngIf="element.gemLevel > 0" class="gemlevel">{{element.gemLevel}}</span>
-                <span *ngIf="element.gemLevel == 0 || element.gemLevel == undefined" class="not-available">n/a</span>
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="gemLevel">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="gemLevel"> Level </th>
+                <td mat-cell *matCellDef="let element">
+                    <span *ngIf="element.gemLevel > 0" class="gemlevel">{{element.gemLevel}}</span>
+                    <span *ngIf="element.gemLevel == 0 || element.gemLevel == undefined"
+                        class="not-available">n/a</span>
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="corrupted">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="corrupted"> Corrupted </th>
-            <td mat-cell *matCellDef="let element"><span
-                    [ngClass]="{'corrupted': element.corrupted }">{{element.corrupted ? 'yes' : 'no'}}</span></td>
-        </ng-container>
+            <ng-container matColumnDef="corrupted">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="corrupted"> Corrupted </th>
+                <td mat-cell *matCellDef="let element"><span
+                        [ngClass]="{'corrupted': element.corrupted }">{{element.corrupted ? 'yes' : 'no'}}</span></td>
+            </ng-container>
 
-        <ng-container matColumnDef="stacksize">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="stacksize"> Quantity </th>
-            <td mat-cell *matCellDef="let element">
-                {{element.stacksize}}
-                <ng-container *ngIf="isDivinationCard(element.icon)">
-                    /{{element.totalStacksize}}
-                </ng-container>
-            </td>
-        </ng-container>
+            <ng-container matColumnDef="stacksize">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="stacksize"> Quantity </th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.stacksize}}
+                    <ng-container *ngIf="isDivinationCard(element.icon)">
+                        /{{element.totalStacksize}}
+                    </ng-container>
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="valuePerUnit">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="valuePerUnit"> Value&nbsp;&nbsp;<img class="chaos-icon" /> </th>
-            <td mat-cell *matCellDef="let element"><span class="net-worth-value">{{element.valuePerUnit.toFixed(2)}}</span></td>
-        </ng-container>
+            <ng-container matColumnDef="valuePerUnit">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="valuePerUnit"> Value&nbsp;&nbsp;<img
+                        class="chaos-icon" /> </th>
+                <td mat-cell *matCellDef="let element"><span
+                        class="net-worth-value">{{element.valuePerUnit.toFixed(2)}}</span></td>
+            </ng-container>
 
-        <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="value"> Total&nbsp;&nbsp;<img class="chaos-icon" /> </th>
-            <td mat-cell *matCellDef="let element"><span class="net-worth-value">{{element.value.toFixed(2)}}</span></td>
-        </ng-container>
+            <ng-container matColumnDef="value">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="value"> Total&nbsp;&nbsp;<img
+                        class="chaos-icon" /> </th>
+                <td mat-cell *matCellDef="let element"><span class="net-worth-value">{{element.value.toFixed(2)}}</span>
+                </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator showFirstLastButtons [pageSize]="25" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator showFirstLastButtons [pageSize]="25" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    </div>
 </div>
