--- a/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -22,4 +22,4 @@
         <img src="https://via.placeholder.com/120x240" />
     </div>
 </div>
-<app-net-worth-bar></app-net-worth-bar>
+<app-net-worth-bar (tabSelectionChanged)="tabsChanged($event)"></app-net-worth-bar>
