--- a/src/app/login/components/stepper/stepper.component.html
+++ b/src/app/login/components/stepper/stepper.component.html
@@ -22,12 +22,12 @@
       <mat-form-field>
         <mat-select formControlName="leagueName" (selectionChange)="mapTradeLeague($event)"
           placeholder="{{'LEAGUE.NAME' | translate}}" required>
-          <mat-option *ngFor="let item of leagues" [value]="item.id">{{item.id}}</mat-option>
+          <mat-option *ngFor="let item of leagues$ | async" [value]="item">{{item}}</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field>
         <mat-select formControlName="tradeLeagueName" placeholder="{{'TRADELEAGUE.NAME' | translate}}" required>
-          <mat-option *ngFor="let item of tradeLeagues" [value]="item.id">{{item.id}}</mat-option>
+          <mat-option *ngFor="let item of tradeLeagues$ | async" [value]="item">{{item}}</mat-option>
         </mat-select>
       </mat-form-field>
       <div class="btn-grp pull--right">
