--- a/src/app/login/components/stepper/stepper.component.html
+++ b/src/app/login/components/stepper/stepper.component.html
@@ -16,12 +16,12 @@
         </mat-progress-bar>
       </div>
       <div class="btn-grp pull--right">
-        <button mat-raised-button color="primary"
+        <button mat-raised-button color="primary" [disabled]="!accountFormGroup.valid"
           (click)="validate(accountName.value, sessionId.value)">{{'ACTIONS.VALIDATE' | translate}}</button>
       </div>
     </form>
   </mat-step>
-  <mat-step [stepControl]="leagueFormGroup" [editable]="!privateProfileError">
+  <mat-step [stepControl]="leagueFormGroup">
     <form [formGroup]="leagueFormGroup">
       <ng-template matStepLabel>{{'LEAGUE.TITLE' | translate}}</ng-template>
       <p class="mat-body-1">{{'LEAGUE.DESC' | translate}}</p>
@@ -38,7 +38,7 @@
       </mat-form-field>
       <div class="btn-grp pull--right">
         <button mat-raised-button class="btn-back" matStepperPrevious>{{'ACTIONS.BACK' | translate}}</button>
-        <button mat-raised-button color="primary" (click)="authorize()">{{'ACTIONS.CONTINUE' | translate}}</button>
+        <button mat-raised-button color="primary" [disabled]="!leagueFormGroup.valid" (click)="authorize()">{{'ACTIONS.CONTINUE' | translate}}</button>
       </div>
       <div class="my--15" *ngIf="loading$ | async">
         <mat-progress-bar color="primary" mode="indeterminate">
