--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -171,6 +171,9 @@ a {
 /* #endregion */
 
 /* #region Material overrides */
+.mat-snack-bar-container {
+  max-width: 60vw !important;
+}
 /* #endregion */
 
 input:-webkit-autofill,
