--- a/src/app/core/components/notification-sidebar/notification-sidebar.component.html
+++ b/src/app/core/components/notification-sidebar/notification-sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container hasBackdrop="false" class="notification-sidebar-container">
+<mat-sidenav-container hasBackdrop="true" class="notification-sidebar-container">
   <mat-sidenav #sidenav mode="over" position="end">
     <app-notification-list></app-notification-list>
   </mat-sidenav>
