--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -20,6 +20,7 @@ $font-size: 14px;
 /* #region Toolbar */
 $toolbar-height: 30px;
 $toolbar-background-color: #0a0a0a;
+$notification-badge-color: #790000;
 /* #endregion */
 
 /* #region Ads */
