--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -174,6 +174,10 @@ a {
 .mat-snack-bar-container {
   max-width: 60vw !important;
 }
+
+.mat-drawer-backdrop.mat-drawer-shown {
+  background-color: rgba(0, 0, 0, 0.6) !important;
+}
 /* #endregion */
 
 input:-webkit-autofill,
