--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -20,7 +20,7 @@ $font-size: 13px;
 /* #region Toolbar */
 $toolbar-height: 35px;
 $toolbar-background-color: #0a0a0a;
-$notification-badge-color: #790000;
+$notification-badge-color: $secondary;
 /* #endregion */
 
 /* #region Ads */
