--- a/ExilenceNextClient/src/app/login/containers/login-page/login-page.component.scss
+++ b/ExilenceNextClient/src/app/login/containers/login-page/login-page.component.scss
@@ -2,6 +2,9 @@
 
 .login-section {
   width: 40%;
+  -webkit-box-shadow: 0px 0px 32px 1px rgba(0,0,0,0.77);
+  -moz-box-shadow: 0px 0px 32px 1px rgba(0,0,0,0.77);
+  box-shadow: 0px 0px 32px 1px rgba(0,0,0,0.77);
 
   @media (max-width: $screen-xl) {
     width: 60%;
